# vadims_flow

./: Cargo.toml
.devcontainer/: Dockerfile.surrealdb  docker-compose.yml
src/: blog.rs  cli.rs  database.rs  logger.rs  main.rs  server.rs
src/resources/: info.rs  mod.rs  posts.rs
src/schemas/: posts.rs
src/views/: info.rs  mod.rs  posts.rs
