[package]
name = "vadims_flow"
version = "0.1.0"
edition = "2021"


build = "build.rs"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.39"
env_logger = "0.11.6"
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
surrealdb = { version = "2.2.1", features = ["kv-mem"] }
apistos = { version = "0.4.2", features = ["scalar"] }
schemars = { package = "apistos-schemars", version = "0.8" }
apistos-models = "0.4.2"
clap = { version = "4.5.30", features = ["cargo", "string"] }


[build-dependencies]
anyhow = "1.0.96"
vergen = { version = "9.0.3", features = ["build", "cargo", "rustc", "si"] }


[lints.clippy]
needless_return = "allow"
